--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
 	/*width: 100vw;*/
 	height: 100vh;
 	margin: auto;
-	background-color: #696969;
+	background-color: #2F4F4F;
 }
 
 a{
@@ -13,13 +13,14 @@ a{
 	font-weight: bolder;
 }
 
- p{
-	color: #4169E1;
+ a{
+	text-decoration: underline;
 }
 
 a, p{
 	font-size: 2rem;
 	font-family: 'Bellefair', serif;
+	color: white;
 }
 
 .glyphicon{
@@ -33,7 +34,6 @@ a, p{
 
 
 .wiki{
-	border: 1px solid black;
 	padding: 30rem;
 	margin-top: 10rem;
 }
@@ -42,5 +42,5 @@ a, p{
 	border: 1px solid black;
 	padding: 5rem;
 	border-radius: 60px;
-	background-color: #D3D3D3;	
+	background-color: #696969;	
 }
