--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,9 @@ a, p{
 	color: white;
 }
 
-.glyphicon{
+/*.glyphicon{
 	color: orange;
-}
+}*/
 
 .btn{
 	background-color: #F8F8FF;
@@ -43,4 +43,15 @@ a, p{
 	padding: 5rem;
 	border-radius: 60px;
 	background-color: #696969;	
+}
+
+input[type=text] {
+    width: 50%;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+
+/* When the input field gets focus, change its width to 100% */
+input[type=text]:focus {
+    width: 100%;
 }
