--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ body{
 /*	background-color: #2F4F4F;
 */	background: url("http://www.fullhdwpp.com/wp-content/uploads/Wikipedia.jpg");
 	background-size: 100vw 100vh;
+	background-repeat:no-repeat;
+	background-attachment: fixed;
+	background-position: center; 
 }
 
 
